[package]
name = "traveller_problem"
version = "1.1.0"
edition = "2021"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genetic_algorithms="1.5.0"
csv = "1.3.0"
rand = "0.8.5"
plotly = "0.9.0"
serde = { version = "1.0.209", features = ["derive"] }